helm/cert-manager/crl/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: local-ca-crls
  namespace: istio-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: localhost-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - crl.localhost
  rules:
    - matches:
        - path:
            type: Exact
            value: /root.crl
        - path:
            type: Exact
            value: /intermediate.crl
      backendRefs:
        - group: ""
          kind: Service
          name: local-ca-crl-server
          port: 80
